@@ -372,6 +372,10 @@ function get_projects_for_member($sa_url, $signer, $member_id, $is_member, $role
   if (! is_object($signer)) {
     throw new InvalidArgumentException('Null signer');
   }
+  if (! ($signer instanceof GeniUser)) {
+    /* Signer must be a GeniUser because we need its URN. */
+    throw new InvalidArgumentException('Signer is not a GeniUser');
+  }
   //  $cert = $signer->certificate();
   //  $key = $signer->privateKey();
   //  $get_projects_message['operation'] = 'get_projects_for_member';
@@ -382,10 +386,9 @@ function get_projects_for_member($sa_url, $signer, $member_id, $is_member, $role
   //			 $cert, $key, 
   //			 $signer->certificate(), $signer->privateKey());
 
-  global $user;
   $options = array('_dummy' => null);
   $client = XMLRPCClient::get_client($sa_url, $signer);
-  $member_urn = $user->urn;
+  $member_urn = $signer->urn;
   $rows = $client->lookup_projects_for_member($member_urn, $client->creds(), $options);
   if ($is_member) {    
     $project_uuids = array_map(function ($row) { return $row['PROJECT_UID']; }, array_values($rows));
@@ -428,7 +431,6 @@ function lookup_project_details($sa_url, $signer, $project_uuids)
 
   //  error_log("PIDS = " . print_r($project_uuids, true));
 
-  global $user;
   $client = XMLRPCClient::get_client($sa_url, $signer);
   $options = array('match' => array('PROJECT_UID' => array_values($project_uuids)));
   $results = $client->lookup_projects($client->creds(), $options);
